crates/galera-core/tests/snapshots/fixtures__listas.snap
---
source: crates/galera-core/tests/fixtures.rs
expression: code
---
// Generado por Galera a partir de document.json.
// No editar a mano: este archivo se reescribe entero en cada compilación.
#set document(title: "Listas")
#set page(width: 210mm, height: 297mm, margin: 0pt)

// p1
#place(top + left, dx: 20mm, dy: 20mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[Lo que trae la cooperativa:#list([Trigo], [Cebada#list([De secano], [De regadío])], [Centeno])Y hasta aquí.] })] <el-vinetas>
#place(top + left, dx: 20mm, dy: 80mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#enum([Primero], [#strong[Segundo]#enum([Segundo bis])], [Tercero])] })] <el-numerada>
