crates/galera-core/tests/snapshots/fixtures__variables.snap
---
source: crates/galera-core/tests/fixtures.rs
expression: code
---
// Generado por Galera a partir de document.json.
// No editar a mano: este archivo se reescribe entero en cada compilación.
#set document(title: "Variables")
#set page(width: 210mm, height: 297mm, margin: 0pt)

// p1
#place(top + left, dx: 20mm, dy: 30mm)[#block(width: 170mm, { set text(font: "Inter", size: 18pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[Informe de Cooperativa \#1 del Este] })] <el-titulo>
#place(top + left, dx: 20mm, dy: 60mm)[#block(width: 170mm, { set text(font: "Inter", size: 12pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[A fecha de #strong[2026-09-21], el total es de 1250.5 euros.#linebreak();Firmado: {{pendiente}}] })] <el-cuerpo>
#place(top + left, dx: 20mm, dy: 100mm)[#block(width: 170mm, { set text(font: "Inter", size: 12pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[Una llave { suelta y {{sin-definir}} no valen.] })] <el-suelta>
